--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "yandex_praktikum",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "## Описание проекта:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "author": "Zuev Alexandr",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.5",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   }
 }
